@@ -10,7 +10,6 @@ import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Document
 public class AnimalEntity {
@@ -92,15 +91,23 @@ public class AnimalEntity {
         TaxonomicSpecie taxonomicSpecie = this.taxonomicSpecieEntity.toTaxonomicSpecie();
         List<Vaccine> vaccines = this.vaccineEntities.stream()
                 .map(VaccineEntity::toVaccine)
-                .collect(Collectors.toList());
+                .toList();
         return new Animal(this.identificationChip, this.name, this.age, taxonomicSpecie, vaccines);
     }
 
+    @Override
     public boolean equals(Object obj) {
+        if (obj == null || this == obj) {
+            return false;
+        }
         AnimalEntity objAux = (AnimalEntity) obj;
-        return this == obj || obj != null && getClass() == obj.getClass() && (this.identificationChip.equals(objAux.getIdentificationChip()));
+        return getClass() == obj.getClass() && this.identificationChip.equals(objAux.getIdentificationChip());
     }
 
+    @Override
+    public int hashCode() {
+        return this.identificationChip.hashCode();
+    }
 
     @Override
     public String toString() {
